// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R1 — the phone is unchanged (golden) contacts add sheet (header Plus), iOS 390 1`] = `
{
  "lines": 506,
  "sha256": "9d5f651df944c66b2acee146f81b9cfee0ce238cd75e4f587632a185a0823576",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, iOS 390 1`] = `
{
  "lines": 506,
  "sha256": "61cd8e27d556ce08b179709d703ccda799897612faf33e714b48e17be0941727",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 390 1`] = `
{
  "lines": 506,
  "sha256": "61cd8e27d556ce08b179709d703ccda799897612faf33e714b48e17be0941727",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts at rest, web 768 1`] = `
{
  "lines": 506,
  "sha256": "61cd8e27d556ce08b179709d703ccda799897612faf33e714b48e17be0941727",
}
`;

exports[`lane R1 — the phone is unchanged (golden) contacts detail open, iOS 390 1`] = `
{
  "lines": 601,
  "sha256": "8c88ba3e1bcae0baca2178a4f7db41751dbc2722b555f5e6833bd533fd573388",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew add sheet (add-crew-member), iOS 390 1`] = `
{
  "lines": 427,
  "sha256": "00916c14bece4e35f485aa0f2db9d2b0a963c9c9ffc9bb453b2425a8cbea3d6a",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, iOS 390 1`] = `
{
  "lines": 427,
  "sha256": "102474c175a2f9eef368a48bf566654c0598fec86e09784fcc39ffd2b6f3afc8",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 390 1`] = `
{
  "lines": 427,
  "sha256": "102474c175a2f9eef368a48bf566654c0598fec86e09784fcc39ffd2b6f3afc8",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew at rest, web 768 1`] = `
{
  "lines": 427,
  "sha256": "102474c175a2f9eef368a48bf566654c0598fec86e09784fcc39ffd2b6f3afc8",
}
`;

exports[`lane R1 — the phone is unchanged (golden) crew detail open, iOS 390 1`] = `
{
  "lines": 526,
  "sha256": "6bf10b04bf15a3935a96b1a3bb155bdbee2a11d57292706afdb4b1e9f96521fe",
}
`;
